fix gap

--- a/modules/Storefront/Resources/assets/public/sass/pages/checkout/create/layouts/_checkout-left.scss
+++ b/modules/Storefront/Resources/assets/public/sass/pages/checkout/create/layouts/_checkout-left.scss
@@ -74,7 +74,7 @@
     }
 
     .ship-to-different-address-form {
-        padding-top: 14px;
+        padding-top: 10px;
     }
 
     .order-notes {
